# neuralite

./: .env_example  .gitignore  DOKKU_SCALE  LICENSE  LocalDockerfile  Procfile  README.md  app.json  docker-compose-langchain.yml  docker-compose.yml  go.work  go.work.sum  requirements.txt  vetur.config.js
.github/workflows/: dokku.yml
OLD/: README.md
OLD/go_summarizing_microservice/: go.mod  go.sum  main.go
OLD/openai_api_microservice/: pyproject.toml  test.py
docs/: TODO.md  algo_activity.puml  erd.puml  mindmap.puml  post_fact_activity.puml  versions.md
dtb/: celery.py  settings.py  urls.py  views.py
grpc/: go.mod
grpc/cmd/client/: main.go
grpc/cmd/server/: main.go
grpc/pkg/adder/: grpcserver.go
grpc/server/: README.md
grpc/wails_client/: .gitignore  app.go  go.mod  go.sum  main.go  wails.json
grpc/wails_client/frontend/: index.html  package-lock.json  (+4 more)
langchain_summ/: Dockerfile  README.md  pyproject.toml
langchain_summ/app/: server.py
langchain_summ/app/chains/: chain.py
llm_api/: Dockerfile  api_requests.py  main.py  pyproject.toml
llm_api/app/api/endpoints/: audio.py  storage.py  tasks.py
llm_api/app/core/: openai_service.py  speech_to_text_service.py  storage_service.py  yandex_cloud_service.py
llm_api/app/models/domain/: audio.py  task.py
llm_api/app/models/schemas/: audio.py  storage.py  task.py
nginx/: dev.conf
summarizations/: admin.py  apps.py  models.py  services.py  signals.py  tasks.py
summarizations/migrations/: 0001_initial.py  0002_auto_20230810_0014.py  0003_alter_summarizationtask_bot_telegram_msg_id.py  0004_auto_20230811_1203.py  0005_auto_20230811_1842.py  0006_alter_summarizationtask_duration.py  0007_auto_20230811_1850.py  0008_voicemessage_user_telegram_msg_id.py  0009_voicemessage_bot_telegram_msg_id.py  0010_voicemessage_summarization_task.py  0011_auto_20230813_1107.py  0012_voicemessage_stt_operation_id.py  0013_summarizationtask_openai_extracted_facts.py  0014_alter_summarizationtask_openai_extracted_facts.py  0015_alter_summarizationtask_openai_extracted_facts.py  0016_langchainsummarizationtask.py
summarizations/services/: common.py  langchain_summarization.py  speech_to_text.py  storage.py  summarization.py
summarizations/tasks/: langchain_summarization.py  summarization.py  utils.py  voice.py
tgbot/: dispatcher.py
users/migrations/: 0004_auto_20230809_2241.py
utils/: models.py
(+22 files in other folders)
