[tool.poetry]
name = "langchain_summ"
version = "0.1.0"
description = ""
authors = ["Nikita Glazkov <zitrnik@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
langchain = "^0.0.345"
transformers = "4.36.2"
torch = "2.1.2"
sentencepiece = "0.1.99"
accelerate = "0.25.0"
xformers = "0.0.23.post1"
bitsandbytes = "0.41.1"
peft = "0.7.1"
scipy = "*"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
