[tool.poetry]
name = "llm-api"
version = "0.1.0"
description = ""
authors = ["Nikita Glazkov <zitrnik@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
openai = "^0.27.8"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
