[tool.poetry]
name = "openai-api-microservice"
version = "0.1.0"
description = ""
authors = ["Nikita Glazkov <zitrnik@gmail.com>"]
readme = "README.md"
packages = [{include = "openai_api_microservice"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
